--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
             <i class='bx bxs-lock'></i>
          </div>
          <div class="login">
-            <button><a href="/home2.html" class="hover">login</a>
+            <button><a href="/pakistan_Blogs/home2.html" class="hover">login</a>
             </button>
 
             <input type="checkbox">forget your password ?
 
          </div>
          <div>
-            <h2> <a href="/sign up.html">create New account</a></h2>
+            <h2> <a href="/pakistan_Blogs/sign up.html">create New account</a></h2>
          </div>
       </form>
    </div>
