--- a/create.html
+++ b/create.html
@@ -127,7 +127,7 @@
         <hr>
         <div class="create">
            
-              <button> <a href="/finish.html" >UPload Now</a></button>
+              <button> <a href="/pakistan_Blogs/finish.html" >UPload Now</a></button>
            
         </div>
 
