--- a/sign up.html
+++ b/sign up.html
@@ -132,7 +132,7 @@
         <i class='bx bxl-blogger'></i>
     </div>
     <div>
-        <h3 class="Blog">Ramzan Blog's</h3>
+        <h3 class="Blog">Pakistan's Blog</h3>
     </div>
     <div>
         <h2 class="sign">Sign Up Here For new account</h2>
@@ -156,7 +156,7 @@
             <input type="radio" class="Gender">Female
         </div>
         <div>
-            <button><a href="/home2.html">Finish</a></button>
+            <button><a href="/pakistan_Blogs/home2.html">Finish</a></button>
         </div>
     </div>
     <footer>
