--- a/home2.html
+++ b/home2.html
@@ -106,10 +106,10 @@
         <p class="mid">Explore World's best Blog site </p>
     </div>
     <div class="navebar">
-        <a href="/login.html">Home</a>
-        <a href="/places.html">Catogries
+        <a href="/pakistan_Blogs/login.html">Home</a>
+        <a href="/pakistan_Blogs/places.html">Catogries
         </a>
-        <a href="/create.html">Post Creation</a>
+        <a href="/pakistan_Blogs/create.html">Post Creation</a>
         <a href="#" >Contact Us</a>
     </div>
     <footer>
