--- a/places.html
+++ b/places.html
@@ -106,11 +106,11 @@ color: black;
         <i class='bx bxl-blogger'></i>
     </div>
     <div>
-        <h3 class="Blog">Ramzan Blog's</h3>
+        <h3 class="Blog">Pakistan's Blog</h3>
 </div>
 <h2> Top Cites Of Pakistan You May Have to Visit With Your friends</h2>
 <div class="lahore">
-    <img src="/img/lahore.jpg" alt="" id="lahore">
+    <img src="/pakistan_Blogs/img/lahore.jpg" alt="" id="lahore">
 
     <h4>Devopled city of pakistan</h4>Lahore is the capital and largest city of the Pakistani province of
     Punjab. It
@@ -118,7 +118,7 @@ color: black;
     River Ravi, it is the largest Punjabi-speaking city in the world. Lahore is one of Pakistan's major industrial and
     economic hubs.<a href="https://en.wikipedia.org/wiki/Lahore">wikipedia.org</a>
     <hr>
-    <img src="/img/skp copy.jpg" alt="" id="skp">
+    <img src="/pakistan_Blogs/img/skp copy.jpg" alt="" id="skp">
     <h4>Historical city of pakistan</h4>Mughal Emperor Jahangir laid the foundations of Sheikhupura in 1607 near the
     older town of Jandiala Sher Khan, an important provincial town during the early to middle Mughal era.[7] He also
     erected the nearby Hiran Minar, Sheikhpura's most renowned site, between 1607 and 1620 as a monument to his beloved
@@ -187,8 +187,8 @@ color: black;
         <div class="palte">
             <h3 >catogires</h3>
             <ul>
-                <li><a href="/places.html">Cites Blog</a></li>
-                <li><a href="/food.html">Food Blog</a></li>
+                <li><a href="/pakistan_Blogs/places.html">Cites Blog</a></li>
+                <li><a href="/pakistan_Blogs/food.html">Food Blog</a></li>
                 <li><a href="">cultural Blog</a></li>
             </ul>
         </div>
