--- a/food.html
+++ b/food.html
@@ -233,7 +233,7 @@
             <div class="palte">
                 <h3>catogires</h3>
                 <ul>
-                    <li><a href="/places.html">Cites Blog</a></li>
+                    <li><a href="/pakistan_Blogs/places.html">Cites Blog</a></li>
                     <li><a href="">Food Blog</a></li>
                     <li><a href="">cultural Blog</a></li>
                 </ul>
