--- a/food.html
+++ b/food.html
@@ -160,7 +160,7 @@
             at Lakshmi Chowk in Lahore, under the name <strong>“Kashmiri Daal Chawal”</strong> . Fresh daal, soft rice,
             served with kebabs if you prefer – a wonderful lunch to enjoy when you’re craving something simple.
         </p>
-        <img src="/img/daal chawal" alt="">
+        <img src="/img/daal chawal.jpg" alt="">
         <hr>
         <h2>8. Pathoray</h2>
         <p>
