--- a/food.html
+++ b/food.html
@@ -98,7 +98,7 @@
             even buffalos, which are slow-cooked with different spices to make gravy. Enjoyed with naan or khameeri
             rotis, Paye is often loved by most as a breakfast dish as well.
         </p>
-        <img src="/pakistan_Blogs/img/payee.jpg" alt="">
+        <img src="/pakistan_Blogs/payee.jpg" alt="">
         <p>
             f you love Paye, well, you have to try out <strong>Phajjay Ke Paye</strong> if you still haven’t. Again,
             going back to the
@@ -116,7 +116,7 @@
             slow-cooked meat and stew, flavored with spices that have an effect of a burst of flavors in your mouth. The
             meat of Nihari is so tender, it literally melts in your mouth the moment you ingest it, so trust us when we
             say you have to try it. </p>
-        <img src="/pakistan_Blogs/img/Nihari.jpg" alt="">
+        <img src="/pakistan_Blogs/Nihari.jpg" alt="">
         <p>
 
             <strong>Waris Nihari,</strong> located on Abkari Road in Anarkali (old Lahore) has made a name for itself.
@@ -169,7 +169,7 @@
             Pathoray at Anarkali in Old Lahore at Kaka Pathoray wala, which specializes in Pathoray specifically, or
             even from <strong>Lahore Shahi Pathoray </strong> in Icchra Bazaar.
         </p>
-        <img src="/pakistan_Blogs/img/pathoray.jpg" alt="">
+        <img src="/pakistan_Blogs/pathoray.jpg" alt="">
         <hr>
         <h2>9. Korma</h2>
         <p>
@@ -180,7 +180,7 @@
             accommodating families as well. So it’s not street food, don’t worry! It’s a proper dine-in restaurant where
             you can all go and enjoy different curries, but don’t forget to try their city-wide famous Korma!
         </p>
-        <img src="/pakistan_Blogs/img/korma.jpg" alt="">
+        <img src="/pakistan_Blogs/korma.jpg" alt="">
         <hr>
         <h2>10. Dahi Bharay</h2>
         <p>
@@ -188,7 +188,7 @@
             can put chaat masala on top and enjoy it. Again, quite famous in different markets where women stop to enjoy
             a quick bite during their shopping sprees.
         </p>
-        <img src="/pakistan_Blogs/img/dhahi bhary.jpg" alt="">
+        <img src="/pakistan_Blogs/dhahi bhary.jpg" alt="">
         <p>
             he best dahi bhallay is probably by <strong>Ahmad Dahi Bhallay</strong> . It is located on the main road of
             Nishat Colony among many other branches in Lahore, and you can get as many plates as you’d like to enjoy the
@@ -201,7 +201,7 @@
             light snack – fried shells filled with different foods, like chickpeas, potatoes, onions, imli ki chutney,
             etc., and is eaten by dipping it in meetha (sweet) or khata (bitter) paani.
         </p>
-        <img src="/pakistan_Blogs/img/gool guppay.jpg" alt="">
+        <img src="/pakistan_Blogs/gool guppay.jpg" alt="">
         <p>
             While you can enjoy gol gappay at several different locations, you have to try them from <strong>Lahore
                 Chatkhara</strong>. They are located in Johar Town, MM Alam Road, and even DHA.
@@ -213,7 +213,7 @@
             for the faint of heart! Enjoying steaming hot off the Tawa with a thin roti or naan, Tawa Chicken is famous
             for its level of spice – so beware, or else you’ll regret it!
         </p>
-        <img src="/pakistan_Blogs/img/tawa qima.jpg" alt="">
+        <img src="/pakistan_Blogs/tawa qima.jpg" alt="">
         <p>
             <strong>Arif Chatkhara </strong>at Taxali Gate Road in the Walled City of Lahore has earned a name for
             itself for having the best Tawa Chicken in all of Lahore.
