--- a/food.html
+++ b/food.html
@@ -116,7 +116,7 @@
             slow-cooked meat and stew, flavored with spices that have an effect of a burst of flavors in your mouth. The
             meat of Nihari is so tender, it literally melts in your mouth the moment you ingest it, so trust us when we
             say you have to try it. </p>
-        <img src="/pakistan_Blogs/Nihari.jpg" alt="">
+        <img src="/pakistan_Blogs/nihari.jpg" alt="">
         <p>
 
             <strong>Waris Nihari,</strong> located on Abkari Road in Anarkali (old Lahore) has made a name for itself.
@@ -201,7 +201,7 @@
             light snack – fried shells filled with different foods, like chickpeas, potatoes, onions, imli ki chutney,
             etc., and is eaten by dipping it in meetha (sweet) or khata (bitter) paani.
         </p>
-        <img src="/pakistan_Blogs/gool guppay.jpg" alt="">
+        <img src="/pakistan_Blogs/goll guppay.jpg" alt="">
         <p>
             While you can enjoy gol gappay at several different locations, you have to try them from <strong>Lahore
                 Chatkhara</strong>. They are located in Johar Town, MM Alam Road, and even DHA.
@@ -213,7 +213,7 @@
             for the faint of heart! Enjoying steaming hot off the Tawa with a thin roti or naan, Tawa Chicken is famous
             for its level of spice – so beware, or else you’ll regret it!
         </p>
-        <img src="/pakistan_Blogs/tawa qima.jpg" alt="">
+        <img src="/pakistan_Blogs/tawa chiken.jpg" alt="">
         <p>
             <strong>Arif Chatkhara </strong>at Taxali Gate Road in the Walled City of Lahore has earned a name for
             itself for having the best Tawa Chicken in all of Lahore.
