--- a/places.html
+++ b/places.html
@@ -118,7 +118,7 @@ color: black;
     River Ravi, it is the largest Punjabi-speaking city in the world. Lahore is one of Pakistan's major industrial and
     economic hubs.<a href="https://en.wikipedia.org/wiki/Lahore">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blogs/skp copy.jpg" alt="" id="skp">
+    <img src="/pakistan_Blogs/skp.jpg" alt="" id="skp">
     <h4>Historical city of pakistan</h4>Mughal Emperor Jahangir laid the foundations of Sheikhupura in 1607 near the
     older town of Jandiala Sher Khan, an important provincial town during the early to middle Mughal era.[7] He also
     erected the nearby Hiran Minar, Sheikhpura's most renowned site, between 1607 and 1620 as a monument to his beloved
@@ -126,7 +126,7 @@ color: black;
     laid the foundation of the Sheikhupura Fort in 1607, which is situated in the city's centre.<a
         href="https://en.wikipedia.org/wiki/Sheikhupura">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blog/multan.jpg" alt="" width="20px" height="40px" id="multan">
+    <img src="/pakistan_Blogs/multan.jpg" alt="" width="20px" height="40px" id="multan">
     <h4>Oldest city of pakistan</h4>Multan (مُلتان; [mʊltaːn] ⓘ) is a city in Punjab, Pakistan, located on the bank of
     river Chenab. It is one of the five largest urban centres of Pakistan in 2024 and serves as the administrative
     centre of Multan Division.[7] A major cultural, religious and economic centre of Punjab region, Multan is one of the
@@ -137,7 +137,7 @@ color: black;
     the Umayyad military commander Muhammad bin Qasim in 712 CE after the conquest of Sindh <a
         href="http://en.wikipedia.org/wiki/Multan">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blog/islamabad.jpg" alt="" width="20px" height="40px" id="islamabad">
+    <img src="/pakistan_Blogs/islamabad.jpg" alt="" width="20px" height="40px" id="islamabad">
     <h4>capital of pakistan</h4>Islamabad (/ɪzˈlɑːməbæd/;[7] Urdu: اسلام‌آباد, romanized: Islāmābād, listenⓘ;
     transl. 'City of Islam') is the capital city of the Islamic Republic of Pakistan.[8] It is the country's ninth-most
     populous city with a population of over 1.2 million people[5][9] and is federally administered by the Pakistani
@@ -145,7 +145,7 @@ color: black;
     it replaced Karachi as Pakistan's national capital.<a
         href="https://en.wikipedia.org/wiki/Islamabad">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blog/falabad.jpg" alt="" width="20px" height="40px" id="falabad">
+    <img src="/pakistan_Blogs/falabad.jpg" alt="" width="20px" height="40px" id="falabad">
     <h4>Eight Bazzar of pakistan</h4>Faisalabad ( /fɑːɪsɑːlˌbɑːd/; Punjabi, Urdu: فیصل آباد, Punjabi pronunciation:
     [fɛːsə̆ləˌbäːd]; Urdu pronunciation: [fɛːsˈlɑˌbɑːd] ⓘ), formerly known as Lyallpur (Punjabi, Urdu: لائل پور), is the
     second largest city and industrial centre of the Pakistani province of Punjab. It is an industrial and metropolitan
@@ -154,7 +154,7 @@ color: black;
     the world. Faisalabad is one of Pakistan's wealthiest and most industrialized city, the largest industrial hub and
     second largest city of the wider Punjab region<a href="https://en.wikipedia.org/wiki/Faisalabad">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blog/karachi.jpg" alt="" width="20px" height="40px" id="karachi">
+    <img src="/pakistan_Blogs/karachi.jpg" alt="" width="20px" height="40px" id="karachi">
     <h4>lighting city of pakistan</h4>Karachi (/kəˈrɑːtʃi/; Urdu: کراچی; Sindhi: ڪراچي‎; IPA: [kəˈraːtʃi] ⓘ) is the capital city of
     the Pakistani province of Sindh. It is the largest city in Pakistan and the 12th largest in the world, with a
     population of over 20 million.[12][18] It is situated at the southern tip of the country along the Arabian Sea coast
@@ -164,7 +164,7 @@ color: black;
     linguistically, ethnically-, and religiously-diverse regions,[22] as well as one of the country's most progressive
     and socially liberal cities <a href="https://en.wikipedia.org/wiki/Karachi">wikipedia.org</a>
     <hr>
-    <img src="/pakistan_Blog/sialkot.jpg" alt="" width="20px" height="40px" id="sialkot">
+    <img src="/pakistan_Blogs/sialkot.jpg" alt="" width="20px" height="40px" id="sialkot">
     <h4>Rishest city of pakistan</h4>Sialkot (Punjabi, Urdu: سيالكوٹ) is a city located in Punjab, Pakistan. It is the
     capital of the Sialkot District and the 13th most populous city in Pakistan.[10][5] The boundaries of Sialkot are
     joined by Jammu in the north east, the districts of Narowal in the southeast, Gujranwala in the southwest and Gujrat
