--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body {
-            background-image: url(/img/new.jpg);
+            background-image: url(pakistan_Blogs/new.jpg);
 
         }
 
