--- a/home2.html
+++ b/home2.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body{
-            background-image: url(/img/background\ .jpg);
+            background-image: url(pakistan_Blogs/Background.jpg);
             width: 900px;
         }
         .icon{
