--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    <style>
       body {
-         background-image: url(img/new.jpg );
+         background-image: url(pakistan_Blogs/new.jpg );
          /* height: 600px; */
       }
 
@@ -152,7 +152,7 @@
    <footer>
       <div class="footer">
          <div class="terms" id="card-1">
-            <h2>Rehmani Blog Platform</h1>
+            <h2>Pakistani Blog Platform</h1>
                <p>This website will
                   provide you a short look about pakistan and its cites get your friends here and make them to enjoy
                   this
