--- a/places.html
+++ b/places.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body {
-            background-image: url(/img/new.jpg);
+            background-image: url(pakistan_Blogs/new.jpg);
         }
 
         .icon{
@@ -178,7 +178,7 @@ color: black;
 <footer>
     <div class="footer">
         <div class="palte">
-            <h3>rehmani Blog Platform</h3>
+            <h3>Pakistani Blog Platform</h3>
             This website will
             provide you a short look about pakistan and its cites get <br>your friends here and make them to
             enjoythis site Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit. Illo obcaecati rerum dolore deleniti
