--- a/sign up.html
+++ b/sign up.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body {
-            background-image: url(img/new.jpg);
+            background-image: url(pakistan_Blogs/new.jpg);
         }
 
         .page {
@@ -162,7 +162,7 @@
     <footer>
         <div class="footer">
             <div class="terms" id="card-1">
-                <h1>Rehmani Blog Platform</h1>
+                <h1>Pakistani Blog Platform</h1>
                 <p>This website will
                     provide you a short look about pakistan and its cites get your friends here and make them to enjoy
                     this site
