--- a/food.html
+++ b/food.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body {
-            background-image: url(/img/new.jpg);
+            background-image: url(pakistan_Blogs/new.jpg);
         
         }
 
@@ -223,7 +223,7 @@
     <footer>
         <div class="footer">
             <div class="palte">
-                <h3>rehmani Blog Platform</h3>
+                <h3>Pakistani Blog Platform</h3>
                 This website will
                 provide you a short look about pakistan and its cites get <br>your friends here and make them to
                 enjoythis site Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit. Illo obcaecati rerum dolore
