--- a/home2.html
+++ b/home2.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body{
-            background-image: url(pakistan_Blogs/Background.jpg);
+            background-image: url(/pakistan_Blogs/Background.jpg);
             width: 900px;
         }
         .icon{
@@ -106,7 +106,7 @@
         <p class="mid">Explore World's best Blog site </p>
     </div>
     <div class="navebar">
-        <a href="/pakistan_Blogs/login.html">Home</a>
+        <a href="/pakistan_Blogs/index.html">Home</a>
         <a href="/pakistan_Blogs/places.html">Catogries
         </a>
         <a href="/pakistan_Blogs/create.html">Post Creation</a>
