--- a/home2.html
+++ b/home2.html
@@ -106,7 +106,7 @@
         <p class="mid">Explore World's best Blog site </p>
     </div>
     <div class="navebar">
-        <a href="/Blog Platform/index.html">Home</a>
+        <a href="/Blog-platform/index.html">Home</a>
         <a href="/pakistan_Blogs/places.html">Catogries
         </a>
         <a href="/pakistan_Blogs/create.html">Post Creation</a>
