--- a/food.html
+++ b/food.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body {
-            background-image: url(/pakistan_Blogs/new.jpg);
+            background-image: url(/pakistan_Blogs/Background.jpg);
         
         }
 
