--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
    <style>
       body {
-         background-image: url(img/new.jpg );
+         background-image: url(/pakistan_Blogs/Background.jpg );
          /* height: 600px; */
       }
 
@@ -138,14 +138,14 @@
             <i class='bx bxs-lock'></i>
          </div>
          <div class="login">
-            <button><a href="/Blog Portal/home2.html" class="hover">login</a>
+            <button><a href="/pakistan_Blogs/home2.html" class="hover">login</a>
             </button>
 
             <input type="checkbox">forget your password ?
 
          </div>
          <div>
-            <h2> <a href="/Blog Portal/sign up.html">create New account</a></h2>
+            <h2> <a href="/pakistan_Blogs/sign up.html">create New account</a></h2>
          </div>
       </form>
    </div>
