--- a/sign up.html
+++ b/sign up.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body {
-            background-image: url(pakistan_Blogs/new.jpg);
+            background-image: url(pakistan_Blogs/Background.jpg);
         }
 
         .page {
