--- a/finish.html
+++ b/finish.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
         body{
-            background-image: url(/pakistan_Blogs/Background.jpg);
+            background-image: url(/pakistan_Blogs/Background 1.jpg);
            
         }
 
