--- a/home2.html
+++ b/home2.html
@@ -110,7 +110,7 @@
         <a href="/pakistan_Blogs/places.html">Catogries
         </a>
         <a href="/pakistan_Blogs/create.html">Post Creation</a>
-        <a href="#" >Contact Us</a>
+        <a href="/pakistan_Blogs/contact.html" >Contact Us</a>
     </div>
     <footer>
         <p id="p">&copy; 2024 Blog's Platform</p> 
